fix: make changes to css layouts after shifting contact section to footer

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -37,12 +37,11 @@ strong {
 }
 
 .container {
-  padding-block: calc(var(--base-padding) * 22) calc(var(--base-padding) * 20);
   inline-size: min(90vw, 992px);
   margin-inline: auto;
 
-  .section-wrapper:not(:last-of-type) {
-    margin-block-end: calc(var(--base-margin) * 26);
+  .section-wrapper {
+    min-block-size: 100vh;
   }
 
   .section-heading {
@@ -61,16 +60,10 @@ strong {
   }
 
   @media screen and (width > 768px) {
-    padding-block-start: calc(var(--base-padding) * 16);
-
     .section-heading {
       span:nth-of-type(2) {
         font-size: calc(var(--base-fs) * 2);
       }
-    }
-
-    .section-wrapper:not(:last-of-type) {
-      margin-block-end: calc(var(--base-margin) * 18);
     }
   }
 }
