--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -1,5 +1,11 @@
 .footer {
-  padding-block-end: calc(var(--base-padding) * 3);
+  padding-block: calc(var(--base-padding) * 12) calc(var(--base-padding) * 3);
+  gap: calc(var(--base-gap) * 20) 0;
+
+  section h2 {
+    font-size: calc(var(--base-fs) * 2.5);
+    text-align: center;
+  }
 
   .social-link {
     transition: opacity 250ms ease;
