--- a/src/scss/page/contact.scss
+++ b/src/scss/page/contact.scss
@@ -1,5 +1,5 @@
 .contact {
-  margin-block-start: calc(var(--base-margin) * 4);
+  margin-block-start: calc(var(--base-margin) * 2);
   width: min(85vw, 640px);
   margin-inline: auto;
 
